# PArisNeoMCPServers

./: .gitignore  CONTRIBUTING.md  README.md  run_arxiv_mcp_example.py  run_boiler_plate_test_example.py  run_duckduckgo_mcp_example.py  run_matplotlib_mcp_example.py  run_openai_mcp_example.py  visual_bibliography_app.py
arxiv-mcp-server/: .env.example  pyproject.toml
arxiv-mcp-server/arxiv_mcp_server/: arxiv_wrapper.py  server.py
bitcoin-mcp-server/: pyproject.toml
bitcoin-mcp-server/bitcoin_mcp_server/: __init__.py  bitcoin_wrapper.py  server.py
boiler-plate-mcp/: .env.example  README.md  pyproject.toml
boiler-plate-mcp/example_mcp_server/: __init__.py  server.py
duckduckgo-mcp-server/: .env.example  📄 README.md  📄 pyproject.toml
duckduckgo-mcp-server/duckduckgo-mcp-server/: __init__.py  duckduckgo_wrapper.py  server.py
long-term-memory/: README.md
long-term-memory/long_term_memory/: server.py
matplotlib-mcp-server/: .env.example  📄 README.md  📄 pyproject.toml
matplotlib-mcp-server/matplotlib_mcp_server/: __init__.py  matplotlib_wrapper.py  server.py
openai-mcp-server/: .env.example  README.md  pyproject.toml
openai-mcp-server/openai_mcp_server/: __init__.py  file_server.py  openai_wrapper.py  server.py
scopus-mcp-server/: README.md  pyproject.toml
scopus-mcp-server/scopus_mcp_server/: server.py
security/: security.py
sharepoint-mcp-server/: .env.example  README.md  pyproject.toml
sharepoint-mcp-server/sharepoint_mcp_server/: server.py
utils-mcp-server/: .env.example  📄 pyproject.toml
utils-mcp-server/utils_mcp_server/: __init__.py  server.py  utils_wrapper.py
