# PArisNeoMCPServers/arxiv-mcp-server/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-mcp-server"
version = "0.1.0"
description = "An MCP server for searching Arxiv, downloading papers, and managing local paper databases."
authors = [
    { name = "ParisNeo", email = "parisneoai@gmail.com" },
    { name = "Your Name/Alias", email = "youremail@example.com" } # Placeholder for contributor
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving",
]
dependencies = [
    "mcp>=0.6.0",               # MCP SDK
    "arxiv>=2.1.0",             # Python client for the Arxiv API
    "python-dotenv>=0.20.0",    # For loading .env files
    "uvicorn>=0.20.0",          # For running FastMCP if not using stdio
    "ascii-colors>=0.5.5",      # For nice console output
]

[project.scripts]
arxiv-mcp-server = "arxiv_mcp_server.server:main_cli"

[project.urls]
Repository = "https://github.com/PArisNeoMCPServers/PArisNeoMCPServers"