# PArisNeoMCPServers/arxiv-mcp-server/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-mcp-server"
version = "0.1.0"
description = "An example MCP server."
authors = [
    { name = "your nbame", email = "your email" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving",
]
dependencies = [
    "mcp>=0.6.0",               # MCP SDK
    "python-dotenv>=0.20.0",    # For loading .env files
    "uvicorn>=0.20.0",          # For running FastMCP if not using stdio
    "ascii-colors>=0.5.5",      # For nice console output
]

[project.scripts]
example-mcp-server = "example_mcp_server.server:main_cli"

[project.urls]
Repository = "https://github.com/PArisNeoMCPServers/PArisNeoMCPServers"