# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharepoint-mcp-server"
version = "0.1.0"
description = "An MCP server for interacting with Microsoft SharePoint sites."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: File Sharing",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp>=0.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.20.0",
    # --- SharePoint Specific ---
    "Office365-REST-Python-Client>=2.5.0",
]

[project.scripts]
sharepoint-mcp-server = "sharepoint_mcp_server.server:main_cli"

[project.urls]
Repository = "https://github.com/PArisNeoMCPServers/PArisNeoMCPServers"